--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "opendap-viewer",
   "version": "0.0.0",
   "dependencies": {
-    "grunt": "^0.4.5"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-bower-task": "^0.3.4",
     "grunt-browserify": "^2.1.3",
     "grunt-contrib-coffee": "^0.10.1",
+    "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-traceur": "^0.2.9"
   }
