Enable drag and drop on touch devices

--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "jqdap": "*",
     "topojson": "~1.6.18",
     "jquery-ui": "~1.11.1",
-    "angular-dragdrop": "~1.0.8"
+    "angular-dragdrop": "~1.0.8",
+    "jqueryui-touch-punch": "*"
   },
   "exportsOverride": {
     "angular-ui-router": {
