Add drawing isosurface

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "topojson": "~1.6.18",
     "jquery-ui": "~1.11.1",
     "angular-dragdrop": "~1.0.8",
-    "jqueryui-touch-punch": "*"
+    "jqueryui-touch-punch": "*",
+    "threejs-controls": "*"
   },
   "exportsOverride": {
     "angular-ui-router": {
@@ -34,6 +35,9 @@
     },
     "jquery-ui": {
       "js": "jquery-ui.*"
+    },
+    "threejs-controls": {
+      "js": "controls/TrackballControls.js"
     },
     "*": {
       "js": "**/*.js",
