--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,13 @@
 language: node_js
 node_js:
-  - "0.10"
-before_install:
-  - npm install -g grunt-cli
-  - npm install -g bower
+  - "5"
 install:
   - npm install
-  - bower install
 before_script:
-  - grunt build
+  - npm run build
 after_success:
   - git clone https://github.com/likr/opendap-viewer.git --branch=gh-pages tmp
-  - grunt bower
-  - cp -R app/* tmp
+  - cp -R public/* tmp
   - pushd tmp
   - git add -A
   - git commit -m 'update'
