--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "name": "opendap-viewer",
-  "version": "0.0.15",
-  "dependencies": {},
+  "version": "0.1.0",
+  "scripts": {
+    "start": "webpack-dev-server --content-base public",
+    "build": "webpack"
+  },
+  "dependencies": {
+    "angular": "^1.5.0",
+    "angular-dragdrop": "^1.0.13",
+    "angular-ui-bootstrap": "^1.2.4",
+    "three.js": "^0.73.2",
+    "three.trackball": "0.0.1",
+    "topojson": "^1.6.24",
+    "vdap": "^0.1.1"
+  },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-bower-task": "^0.3.4",
-    "grunt-browserify": "^2.1.3",
-    "grunt-bump": "0.0.16",
-    "grunt-contrib-coffee": "^0.10.1",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-traceur": "^0.2.9"
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   }
 }
